<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PokeDetailActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null"
            android:elevation="5dp"
            app:titleTextColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/image_pokemon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"/>


    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:indeterminateDrawable="@drawable/poke_loader"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@+id/image_pokemon"
            app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/types_title" android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/types_content" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/types_title" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"/>
            <TextView
                    android:text="@string/height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/height_title"
                    android:textSize="24sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/types_content" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/height_content" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/height_title" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"/>
            <TextView
                    android:text="@string/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/weight_title" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/height_content" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/weight_content" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/weight_title" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"/>
            <TextView
                    android:text="@string/moves"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:id="@+id/moves_title" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/weight_content" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"/>
            <Button
                    android:text="@string/show_moves"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:textColor="@color/redLight"
                    android:onClick="movesButton"
                    android:id="@+id/moves_button"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/moves_title" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>